lab8/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: allow-backend-to-mysql
spec:
  podSelector:
    matchLabels:
      app: my-sql   
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
      - protocol: TCP
        port: 3306
